--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,26 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+html, body {
+    width: 100%;
+    margin: 0;
 }
 
-.menu:before {
-  content: "[";
+/* Vertically centered */
+#main {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-.menu:after {
-  content: "]";
+#tweetInput {
+    width: 50%;
 }
 
-.menu > li {
-  display: inline;
+#voiceInput {
+    resize: vertical;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+/* All progressbar text */
+uib-progressbar span {
+    color: white;
+    white-space: nowrap;
 }
